# TexasPoker

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/routes/: hands.py
backend/app/core/: config.py  database.py
backend/app/models/: hand.py
backend/app/repositories/: hand_repository.py
backend/app/schemas/: hand.py
backend/app/services/: poker_service.py
backend/tests/: test_api.py
frontend/: Dockerfile  jest.config.js  package-lock.json  package.json
frontend/__mocks__/: uuid.js
frontend/__tests__/: poker-game.test.tsx  poker-logic.test.ts
frontend/app/: page.tsx
frontend/components/poker/: GameControls.tsx  HandHistory.tsx  PlayLog.tsx  PokerGame.tsx
frontend/lib/: api.ts  poker-logic.ts  types.ts
